Add consent encrypting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=pbanking
 
-spring.config.import=optional:file:.env[.properties]
-
 spring.datasource.url=jdbc:postgresql://${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -9,6 +7,10 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.config.import=optional:classpath:banks.yml
+
+# все импорты в одну строчку, иначе не работает
+spring.config.import=optional:classpath:banks.yml,optional:file:.env[.properties]
 bank.id=team062
 bank.name=Paltus bank
+
+encryption.secret-key=${SECRET_KEY}
