--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=pbanking
 
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=optional:file:.env[.properties],optional:classpath:banks.yml
 
 spring.datasource.url=jdbc:postgresql://${DB_URL}
 spring.datasource.username=${DB_USERNAME}
@@ -8,7 +8,7 @@ spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.config.import=optional:classpath:banks.yml
+spring.jpa.hibernate.ddl-auto=update
 bank.id=team062
 bank.name=Paltus bank
+bank.token_path=/auth/bank-token
