feat: add bank token service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+
 bank.id=team062
 bank.name=Paltus bank
 bank.token_path=/auth/bank-token
+
+secret.team_code=${TEAM_CODE}
+secret.team_secret=${TEAM_SECRET}
