--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
 			<version>0.12.6</version>
 			<scope>runtime</scope>
 		</dependency>
+        <dependency>
+            <groupId>ai.catboost</groupId>
+            <artifactId>catboost-prediction</artifactId>
+            <version>1.2.6</version>
+        </dependency>
 	</dependencies>
 
 
