--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
             <artifactId>catboost-prediction</artifactId>
             <version>1.2.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
 	</dependencies>
 
 
