--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,14 @@ bank.name=Paltus bank
 
 secret.team_code=${TEAM_CODE}
 secret.team_secret=${TEAM_SECRET}
+
+server:
+  error:
+    whitelabel:
+      enabled: false
+    include-message: always
+    path: /error
+spring:
+  web:
+    resources:
+      add-mappings: false
