--- a/pom.xml
+++ b/pom.xml
@@ -113,9 +113,12 @@
             <artifactId>onnxruntime</artifactId>
             <version>1.20.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>3.5.6</version>
+        </dependency>
 	</dependencies>
-
-
 	<build>
 		<plugins>
 			<plugin>
