feat: kafka trx sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,10 @@ bank.name=Paltus bank
 secret.team_code=${TEAM_CODE}
 secret.team_secret=${TEAM_SECRET}
 
+kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+kafka.producer.client-id=${KAFKA_CLIENT_ID:pbanking-backend}
+kafka.topics.manual=${KAFKA_CLASSIFIER_TOPIC:transactions.manual}
+
 server:
   error:
     whitelabel:
