--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,10 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>3.5.6</version>
         </dependency>
+        <dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
