--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,8 @@ secret.team_secret=${TEAM_SECRET}
 
 kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 kafka.producer.client-id=${KAFKA_CLIENT_ID:pbanking-backend}
-kafka.topics.manual=${KAFKA_CLASSIFIER_TOPIC:transactions.manual}
+kafka.topics.manual=${KAFKA_CLASSIFIER_TOPIC:manual}
+classifier.service.url=${CLASSIFIER_SERVICE_URL:http://localhost:8000}
 
 server:
   error:
