fix: redis connection issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,9 @@ kafka.producer.client-id=${KAFKA_CLIENT_ID:pbanking-backend}
 kafka.topics.manual=${KAFKA_CLASSIFIER_TOPIC:manual}
 classifier.service.url=${CLASSIFIER_SERVICE_URL:http://localhost:8000}
 
+spring.data.redis.host=redis
+spring.data.redis.port=6379
+
 server:
   error:
     whitelabel:
